# ticket-bot-public

./: config.yaml.example  pyproject.toml  setup.bat
src/ticket_bot/: cli.py  config.py
src/ticket_bot/browser/: base.py  nodriver_engine.py  playwright_engine.py
src/ticket_bot/captcha/: solver.py
tests/: test_tixcraft_api.py
